# pysdhstrip

./: README.md  pyproject.toml
pysdhstrip/: __init__.py  cli.py  pysdhstrip.py
tests/: test_strip.py
