[project]
name = "pysdhstrip"
version = "0.2.0"
description = "Intelligent SDH stripper for SRT subtitles"
authors = [
  { name = "nyuszika7h", email = "nyuszika7h@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~= 3.9"
dependencies = [
  "pysrt ~= 1.1",
  "regex >= 2022.7.25",
]

[project.urls]
Repository = "https://github.com/Robert1917/pysdhstrip"

[project.optional-dependencies]
cli = [
  "click ~= 8.1",
  "cloup ~= 1.0",
  "coloredlogs ~= 15.0",
]

[tool.pdm.dev-dependencies]
dev = [
  "flake8 ~= 5.0",
  "flake8-broken-line ~= 0.5.0",
  "flake8-bugbear ~= 22.7",
  "flake8-builtins ~= 1.5",
  "flake8-comprehensions ~= 3.10",
  "flake8-executable ~= 2.1",
  "flake8-implicit-str-concat ~= 0.3.0",
  "flake8-pie ~= 0.16.0",
  "Flake8-pyproject ~= 1.1",
  "flake8-requirements ~= 1.6",
  "flake8-simplify ~= 0.19.3",
  "flake8-type-checking ~= 2.1",
  "flake8-use-fstring ~= 1.4",
  "isort ~= 5.10",
  "mypy ~= 0.971",
  "pep8-naming ~= 0.13",
  "pre-commit ~= 2.20",
  "pyupgrade ~= 3.1",
  "types-regex >= 2022.7.25",
  "unify ~= 0.5",
  "vulture ~= 2.5",
]

[project.scripts]
pysdhstrip = "pysdhstrip.cli:cli"

[build-system]
requires = ["pdm-pep517 >= 1.0.0"]
build-backend = "pdm.pep517.api"

[tool.flake8]
extend-ignore = ["E203", "PIE803"]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.mypy]
python_version = "3.9"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pysrt"
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = [".venv"]
min_confidence = 100
